<resources>
    <string name="app_name">My Note</string>

    <string name="all">All</string>

    <string name="nav_note">Note</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_remind">Remind</string>
    <string name="nav_trash">Trash</string>
    <string name="nav_settings">Settings</string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>

    <string name="add_tag">Add new tag</string>
    <string name="write_name_tag_here">Write name tag here</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="change_tag">Change tag</string>
    <string name="info">Info</string>
    <string name="share">Share</string>
    <string name="change_background">Change background</string>
</resources>