<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/ic_notes"
            android:title="@string/nav_note" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar_today"
            android:title="@string/nav_calendar" />
        <item
            android:id="@+id/nav_remind"
            android:icon="@drawable/ic_notifications_active"
            android:title="@string/nav_remind" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_restore_from_trash"
            android:title="@string/nav_trash" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
    </group>
</menu>