<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:background="@drawable/custom_background_activity_add_category"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvTitleActivityAddUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/add_tag"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtTitleCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_name_tag_here"
        android:padding="20dp"
        android:paddingStart="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textColor="#62A2F8" />

        <Button
            android:id="@+id/btnAddUpdateCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/add"
            android:textColor="#62A2F8" />
    </LinearLayout>
</LinearLayout>